--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,7 +1,12 @@
 <h1><%= @article.title %></h1>
 <p><%= @article.body %></p>
 
+
 <%= link_to "Edit Post", edit_article_path(@article) %>
 <%= link_to "Delete Post", article_path(@article), method: :delete, data: {confirm: "Really delete the article?"}
 %>
+
+<h3>Comments (<%= @article.comments.size %>)</h3>
+<%= render partial: 'comment', collection: @article.comments %> 
+<%= render partial: 'comments/form' %>
 <%= link_to "<< Back to Articles List", articles_path%>
