--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,10 @@
 <h1><%= @article.title %></h1>
+<p>
+	Tags:
+	<% @article.tags.each do |tag| %>
+		<%= link_to tag.name, tag_path(tag) %>
+	<%end%>
+</p>
 <p><%= @article.body %></p>
 
 
@@ -10,3 +16,4 @@
 <%= render partial: 'comment', collection: @article.comments %> 
 <%= render partial: 'comments/form' %>
 <%= link_to "<< Back to Articles List", articles_path%>
+
