--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -9,8 +9,10 @@
 <div><%= image_tag @article.image.url(:medium) %></div>
 <p><%= @article.body %></p>
 
+<% if logged_in?%>
 <%= link_to "Edit Post", edit_article_path(@article) %>
 <%= link_to "Delete Post", article_path(@article), method: :delete, data: {confirm: "Really delete the article?"}%>
+<%end%>
 
 <h3>Comments (<%= @article.comments.size %>)</h3>
 <%= render partial: 'comment', collection: @article.comments %> 
